--- a/HandleError/orl_12516.md
+++ b/HandleError/orl_12516.md
@@ -1,4 +1,4 @@
-# skillPoint_Oracle
+# ora-12516
 oracle学习，知识积累
     就是Oracle的会话数超出了限制，一般都是由于多次connect建立多个连接会话引起的，最后导致oracle无法响应新的请求，从而出现ora-12516错误。
 	
